# jupyterlab_NC

./: .gitignore  .prettierignore  DALLE.ipynb  MANIFEST.in  README.md  Untitled.ipynb  Untitled1.ipynb  Untitled10.ipynb  Untitled11.ipynb  Untitled12.ipynb  Untitled13.ipynb  Untitled14.ipynb  Untitled15.ipynb  Untitled16.ipynb  Untitled17.ipynb  Untitled18.ipynb  Untitled19.ipynb  Untitled2.ipynb  Untitled21.ipynb  Untitled22.ipynb  Untitled23.ipynb  Untitled24.ipynb  Untitled25.ipynb  Untitled27.ipynb  Untitled28.ipynb  Untitled3.ipynb  Untitled4.ipynb  Untitled5.ipynb  Untitled6.ipynb  Untitled8.ipynb  Untitled9.ipynb  cuda_to_cpu.ipynb  dalle_nc.py  install.json  jest.config.js  package-lock.json  package.json  pyproject.toml  real_text.txt  requirements.txt  (+4 more)
.github/workflows/: build.yml  check-release.yml
binder/: environment.yml  postBuild
example/: examples.ipynb
jupyter-config/jupyter_notebook_config.d/: jupyterlab_code_formatter.json
jupyter-config/jupyter_server_config.d/: jupyterlab_code_formatter.json
jupyterlab_deepCoder/: __init__.py  _version.py  handlers.py  optimize.py  tmp.py
jupyterlab_deepCoder/labextension/: build_log.json  package.json
jupyterlab_deepCoder/labextension_old/: package.json
jupyterlab_deepCoder/labextension_oldold/: build_log.json  package.json
nc_workspace/2022-08-31_19-56-12/: history.snapshot
nc_workspace/2022-08-31_19-57-46/: history.snapshot
nc_workspace/2022-08-31_20-11-34/: history.snapshot
src/: Untitled.ipynb  Untitled1.ipynb  client.ts  constants.ts  deepcoder.ts  index.ts
style/: base.css  index.css
(+167 files in other folders)
